--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,18 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 520vh;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 10vmin;
   pointer-events: none;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
