--- a/src/tranInput.css
+++ b/src/tranInput.css
@@ -1,9 +1,9 @@
 textarea {
   border: 1px solid #999999;
-  width: 800px;
-  height: 600px;
+  width: 1000px;
   margin: 5px 0;
   padding: 3px;
+  font-size: 20px;
 }
 .textareacontainer {
   padding-right: 8px; /* 1 + 3 + 3 + 1 */
