--- a/src/tranInput.css
+++ b/src/tranInput.css
@@ -1,6 +1,7 @@
 textarea {
   border: 1px solid #999999;
-  width: 1000px;
+  width: 800px;
+  height: 800px;
   margin: 5px 0;
   padding: 3px;
   font-size: 20px;
